Fix for various styling bugs in jump to page and user banner image dialogs related to dark mode

--- a/ngLoreHunter/src/app/shared/components/jump-to-page-dialog/jump-to-page-dialog.component.css
+++ b/ngLoreHunter/src/app/shared/components/jump-to-page-dialog/jump-to-page-dialog.component.css
@@ -21,18 +21,16 @@
   color: var(--text-color);
 }
 
-::ng-deep .mdc-button__label {
+.mat-mdc-button {
   color: var(--text-color);
 }
 
-::ng-deep .mdc-button__label:hover {
-  color: #3f51b5;
-}
 
 p {
   color: var(--text-color);
 }
 
 ::ng-deep .mat-mdc-dialog-container .mdc-dialog__surface {
-  border-radius: 6px;
+  background-color: var(--bkg-color);
+  color: var(--text-color);
 }
